--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,28 @@
 #  CONFIGURACION DE JDBC CON LA DB
 
-spring.datasource.url=jdbc:mysql://java_db:3306/sistema_stock
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_stock
 spring.datasource.username=amelini
 spring.datasource.password=Casaanto1
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
 
 #  CONFIGURACION DE JPA CON LA DB
-
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
+
+
+
+
 #crea las tablas que necesita pero borra la tabla anterior
 
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 
 
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 
 #    environment:
 #      - DATABASE_URL=jdbc:mysql://java_db:3306/sistema_stock
