improving security for the app and setting roles for mappings endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
 
-
-
-
 #crea las tablas que necesita pero borra la tabla anterior
-
 spring.jpa.hibernate.ddl-auto=update
 
+#JWT
+jwt.time.expiration=3600000
 
 
 
